--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -351,7 +351,7 @@ save_to_clipboard = false
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
 [shell]
-program = "/bin/zsh"
+program = "/opt/homebrew/bin/fish"
 
 [window]
 decorations = "none"
