--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,8 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+set-option -g default-shell /opt/homebrew/bin/fish
+
 # Act like Vim
 set-window-option -g mode-keys vi
 list-keys -T copy-mode-vi
