--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 live_config_reload = true
 
 [bell]
@@ -350,7 +351,7 @@ multiplier = 3
 save_to_clipboard = false
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
-[shell]
+[terminal.shell]
 program = "/opt/homebrew/bin/fish"
 
 [window]
